// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hours integration test mostly real modules should return meta data for time entries 1`] = `
Object {
  "body": Object {
    "serialize() of": Object {
      "totalBillableHours": 10.7,
      "totalBillableHoursPerWeek": Object {
        "w45": 10.7,
      },
    },
  },
  "headers": Object {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
  },
  "statusCode": 200,
}
`;

exports[`invoice integration test mostly real modules should return relevant invoice information 1`] = `
Object {
  "body": Object {
    "serialize() of": Object {
      "totalExcludingVAT": "2 354,00 kr",
    },
  },
  "headers": Object {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
  },
  "statusCode": 200,
}
`;
